kuber/3_network/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-app
  ports:
  - name: multitool
    port: 9002
    targetPort: 80
