kuber/3_network/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
  - name: nginx
    port: 9001
    targetPort: 80
