kuber/3_network/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
      nodePort: 30083
